<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dbpk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="common_network_unavailable">当前网络不可用</string>
    <string name="common_network_error">您的网络有问题，请稍后重试</string>
    <string name="next_step">下一步</string>
    <string name="edit">编辑</string>
    <string name="get">获取</string>
    <string name="finish">完成</string>
    <string name="comit">提交</string>
    <string name="common_loading_tips">正在努力加载...</string>

    <string name="pending_payment_order">待付款订单</string>
    <string name="received_orders">待收货订单</string>
    <string name="review_orders">待评论订单</string>
    <string name="manage_the_delivery_address">管理收货地址</string>
    <string name="personal_settings">个人设置</string>
    <string name="my_community">我的社区</string>
    <string name="my_favorties">我的收藏</string>
    <string name="about">关于</string>
    <string name="service_tel">客服电话</string>
    <string name="service_tel_no"> 4000-266-818</string>

    <string name="menu_home_title">item1</string>
    <string name="menu_category_buy">item2</string>
    <string name="menu_collection_title">item3</string>
    <string name="menu_cart_title">item4</string>
    <string name="menu_member_title">item5</string>

</resources>
