<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/layout_login_view"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dip"
        android:background="@drawable/pic_dabeijing" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/frame"
            android:layout_marginTop="@dimen/activity_personal_margin"
            android:layout_centerHorizontal="true" >

            <com.sien.doubeepk.ui.view.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@color/transparent"
                app1:border_color="#40ffffff"
                app1:border_width="1dip" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <com.sien.doubeepk.ui.view.CircleImageView
                    android:id="@+id/image1"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/personal_user_icon"
                    app1:border_color="#60ffffff"
                    app1:border_width="3dip" />
            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:gravity="center"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:text="nickname"
            android:textColor="@color/white"
            android:layout_below="@id/frame"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_17" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/all_order_layout"
        android:layout_width="match_parent"
        android:layout_height="112dip"
        android:layout_below="@id/layout_login_view"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/all_order"
            android:layout_width="match_parent"
            android:layout_height="39dip"
            android:background="@drawable/activity_item_bg_selector"
            android:clickable="true"
            android:drawableRight="@drawable/mine_arrow"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_mine_margin"
            android:paddingRight="@dimen/activity_mine_margin"
            android:text="全部订单"
            android:textColor="@color/bottom_txt_normal"
            android:textSize="@dimen/text_size_15" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_below="@id/all_order"
            android:background="@color/community_list_bottom_line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/line1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pending_payment_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_mine_margin"
                android:layout_marginRight="@dimen/activity_mine_margin"
                android:layout_weight="1"
                android:background="@drawable/activity_item_bg_selector"
                android:clickable="true"
                android:drawableTop="@drawable/icon_pending_payment_order"
                android:gravity="center"
                android:text="@string/pending_payment_order"
                android:textColor="@color/personal_order_color" />

            <TextView
                android:id="@+id/received_orders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_mine_margin"
                android:layout_marginRight="@dimen/activity_mine_margin"
                android:layout_weight="1"
                android:background="@drawable/activity_item_bg_selector"
                android:clickable="true"
                android:drawableTop="@drawable/icon_received_orders"
                android:gravity="center"
                android:text="@string/received_orders"
                android:textColor="@color/personal_order_color" />

            <TextView
                android:id="@+id/review_orders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_mine_margin"
                android:layout_marginRight="@dimen/activity_mine_margin"
                android:layout_weight="1"
                android:background="@drawable/activity_item_bg_selector"
                android:clickable="true"
                android:drawableTop="@drawable/icon_review_orders"
                android:gravity="center"
                android:text="@string/review_orders"
                android:textColor="@color/personal_order_color" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/all_order_layout"
        android:background="@color/bg_color" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="@color/community_list_bottom_line_color" />

            <LinearLayout
                android:id="@+id/person_and_my_layout"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_marginTop="10dip"
                android:background="@color/white"
                android:orientation="vertical" >

                <View
                    android:id="@+id/line_top1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentTop="true"
                    android:background="@color/community_list_bottom_line_color" />

                <RelativeLayout
                    android:id="@+id/person_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/activity_item_bg_selector"
                    android:clickable="true" >

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:layout_marginLeft="14dip"
                        android:layout_marginTop="5dip"
                        android:src="@drawable/icon_person_setting" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="@dimen/activity_mine_margin"
                        android:layout_toRightOf="@id/image2"
                        android:drawableRight="@drawable/mine_arrow"
                        android:gravity="center_vertical"
                        android:text="@string/personal_settings"
                        android:textColor="@color/bottom_txt_normal"
                        android:textSize="@dimen/text_size_15" />
                </RelativeLayout>


                <View
                    android:id="@+id/line_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_below="@id/image"
                    android:background="@color/community_list_bottom_line_color" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/my_favorties_layout"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_below="@id/person_and_my_layout"
                android:layout_marginTop="10dip"
                android:background="@drawable/activity_item_bg_selector"
                android:clickable="true" >

                <View
                    android:id="@+id/line_top2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentTop="true"
                    android:background="@color/community_list_bottom_line_color" />

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line_top2"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="14dip"
                    android:layout_marginTop="5dip"
                    android:src="@drawable/icon_my_favorties" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/line_top2"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="@dimen/activity_mine_margin"
                    android:layout_toRightOf="@id/image3"
                    android:drawableRight="@drawable/mine_arrow"
                    android:gravity="center_vertical"
                    android:text="@string/my_favorties"
                    android:textColor="@color/bottom_txt_normal"
                    android:textSize="@dimen/text_size_15" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentBottom="true"
                    android:background="@color/community_list_bottom_line_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_layout"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_below="@id/my_favorties_layout"
                android:layout_marginTop="10dip"
                android:background="@drawable/activity_item_bg_selector"
                android:clickable="true" >

                <View
                    android:id="@+id/line_top"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentTop="true"
                    android:background="@color/community_list_bottom_line_color" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line_top"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="14dip"
                    android:layout_marginTop="5dip"
                    android:src="@drawable/icon_about" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/line_top"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="@dimen/activity_mine_margin"
                    android:layout_toRightOf="@id/image"
                    android:drawableRight="@drawable/mine_arrow"
                    android:gravity="center_vertical"
                    android:text="@string/about"
                    android:textColor="@color/bottom_txt_normal"
                    android:textSize="@dimen/text_size_15" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentBottom="true"
                    android:background="@color/community_list_bottom_line_color" />
            </RelativeLayout>
            
             <RelativeLayout
                android:id="@+id/client_service_layout"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_below="@id/about_layout"
                android:layout_marginTop="10dip"
                android:background="@drawable/activity_item_bg_selector"
                android:clickable="true" >

                <View
                    android:id="@+id/csline_top"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentTop="true"
                    android:background="@color/community_list_bottom_line_color" />

                <ImageView
                    android:id="@+id/csimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/csline_top"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="14dip"
                    android:layout_marginTop="5dip"
                    android:src="@drawable/cs_tel_icon" />

                <TextView
                    android:id="@+id/cstext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/csline_top"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="@dimen/activity_mine_margin"
                    android:layout_toRightOf="@id/csimage"
                    android:gravity="center_vertical"
                    android:text="@string/service_tel"
                    android:textColor="@color/bottom_txt_normal"
                    android:textSize="@dimen/text_size_15" />
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/csline_top"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="@dimen/activity_mine_margin"
                    android:layout_toRightOf="@id/cstext"
                    android:drawableRight="@drawable/mine_arrow"
                    android:gravity="center_vertical"
                    android:text="@string/service_tel_no"
                    android:textColor="@color/bottom_txt_normal"
                    android:textSize="@dimen/text_size_15" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentBottom="true"
                    android:background="@color/community_list_bottom_line_color" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dip"
                android:layout_below="@id/about_layout" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>